# bib-check

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
bib_check/: __init__.py  checker.py  cli.py  crossref.py  dblp.py  normalizer.py  openalex.py  parser.py  scholar.py
docs/: README.md  app.js  index.html  promo-xiaohongshu.md  style.css
out_retry/: report.md  suggested.bib
out_smoke/: report.md  suggested.bib
