[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bib-check"
version = "0.1.0"
description = "Audit BibTeX entries against Google Scholar and rewrite to a unified style."
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.45",
    "rapidfuzz>=3.6",
    "click>=8.1",
]

[project.scripts]
bib-check = "bib_check.cli:main"

[tool.setuptools.packages.find]
include = ["bib_check*"]
